Bug 422837 - "Always show" system tray items not shown
Summary: "Always show" system tray items not shown
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 5.19.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 422978 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-06-11 17:56 UTC by Matthijs Tijink
Modified: 2020-08-28 15:50 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthijs Tijink 2020-06-11 17:56:59 UTC
SUMMARY

Since updating to the newest version, the system tray items I set to "always show" stay hidden.

Changing it to something else and changing it back to "always show" fixes it until the next restart. I tested this on KMail.

Similar things happened with other icons which should always show up, which only showed up once something changed, but I couldn't reproduce that.
Comment 1 sahsanu 2020-06-12 21:59:04 UTC
After the upgrade to Plasma 5.19.0 I have exactly the same issue on KDE Neon.
Comment 2 Konrad Materka 2020-06-14 19:27:58 UTC
*** Bug 422978 has been marked as a duplicate of this bug. ***
Comment 3 Konrad Materka 2020-06-14 19:35:08 UTC
I can confirm it with KMail.
Comment 5 Konrad Materka 2020-06-14 21:16:17 UTC
Git commit 3367908e976ca5be3ee6d066fd2c278613f5fe50 by Konrad Materka.
Committed on 14/06/2020 at 20:14.
Pushed by kmaterka into branch 'Plasma/5.19'.

[applets/systemtray] Fix SNI "Always shown" restore

Status Notifier Items set to "Always shown" are not restored correctly.

M  +3    -1    applets/systemtray/systemtraymodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/3367908e976ca5be3ee6d066fd2c278613f5fe50
Comment 6 proteus5 2020-08-28 11:47:18 UTC
How long to fix this annoying bug?
Comment 7 Nate Graham 2020-08-28 15:50:04 UTC
The bug report is already marked as fixed in Plasma 5.19.1. Are you trying to say that you have that Plasma version or a later one and it's still broken for you?