[applets/systemtray] Fix SNI "Always shown" restore

Status Notifier Items set to "Always shown" are not restored correctly.

BUG: 422837